# counting_stars

./: .gitignore  CMakeLists.txt  CastException_8h_source.html  Complex__number_8h_source.html  DivisionByZeroException_8h_source.html  Doxyfile  FileNotFoundException_8h_source.html  IllegalCapacityException_8h_source.html  IllegalDigitException_8h_source.html  IllegalDimException_8h_source.html  IllegalSignException_8h_source.html  IllegalStateException_8h_source.html  Matrix_8h_source.html  Matrix__column__coord_8h_source.html  Matrix__coords_8h_source.html  Matrix__proxy_8h_source.html  Matrix__row__coord_8h_source.html  NullPointerException_8h_source.html  OutOfIntegerDivisionException_8h_source.html  OutOfRangeException_8h_source.html  OverflowException_8h_source.html  ParseException_8h_source.html  Pos_8h_source.html  README.md  Rational__number_8h_source.html  Readme.txt  StringInt_8h_source.html  Vector_8h_source.html  annotated.html  classCastException-members.html  classCastException.html  classCastException__coll__graph.map  classCastException__inherit__graph.dot  classCastException__inherit__graph.md5  classComplex__number-members.html  classComplex__number.html  classComplex__number_a27ab0f6fe07a938cd1a06406d0437a71_cgraph.dot  classComplex__number_a27ab0f6fe07a938cd1a06406d0437a71_cgraph.map  classComplex__number_a27ab0f6fe07a938cd1a06406d0437a71_cgraph.md5  classComplex__number_a679412dd973953e0cceca70663a05796_cgraph.dot  (+279 more)
.github/workflows/: doxygen.yml
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+9 more)
src/: utils.cpp  utils.h
src/Complex_number/: Complex_number.cpp  Complex_number.h
src/Complex_number/tests/: Complex_number_constructor_test.cpp  Complex_number_operators_test.cpp
src/Matrix/: Matrix.h  Matrix_column_coord.h  Matrix_coords.h  Matrix_proxy.h  Matrix_row_coord.h  Pos.h
src/Matrix/Coords/: Matrix_column_coord.cpp  Matrix_column_coord.h  Matrix_coords.cpp  Matrix_coords.h  Matrix_row_coord.cpp  Matrix_row_coord.h
src/Matrix/tests/: Matrix_column_coord_test.cpp  Matrix_coords_test.cpp  Matrix_row_coord_test.cpp  Pos_test.cpp
src/Pos/: Pos.cpp  Pos.h
src/Rational_number/: Rational_number.cpp  Rational_number.h
src/Rational_number/tests/: Rational_number_constructor_test.cpp  Rational_number_operators_test.cpp  Rational_number_utils_test.cpp  string_arithmetics_test.cpp
src/StringInt/: StringInt.cpp  StringInt.h
src/StringInt/tests/: StringInt_cast_test.cpp  StringInt_constructor_test.cpp  StringInt_operators_test.cpp
src/Vector/: Vector.bool.cpp  Vector.cpp  Vector.h  Vector_bool.cpp
src/Vector/tests/: Vector_test.cpp
src/exceptions/: DivisionByZeroException.h  FileNotFoundException.cpp  FileNotFoundException.h  IllegalDigitException.h  IllegalDimException.cpp  IllegalDimException.h  IllegalSignException.h  NullPointerException.cpp  OutOfIntegerDivisionException.h  OutOfRangeException.h  OverflowException.h  exceptions.h
src/exceptions/CastException/: CastException.h
src/exceptions/DivisionByZeroException/: DivisionByZeroException.h
src/exceptions/FileNotFoundException/: FileNotFoundException.h
src/exceptions/IllegalCapacityException/: IllegalCapacityException.cpp  IllegalCapacityException.h
src/exceptions/IllegalDigitException/: IllegalDigitException.h
src/exceptions/IllegalDimException/: IllegalDimException.h
src/exceptions/IllegalSignException/: IllegalSignException.h
src/exceptions/IllegalStateException/: IllegalStateException.h
src/exceptions/NullPointerException/: NullPointerException.cpp  NullPointerException.h
src/exceptions/OutOfIntegerDivision/: OutOfIntegerDivisionException.h
src/exceptions/OutOfIntegerDivisionException/: OutOfIntegerDivisionException.h
src/exceptions/OutOfRangeException/: OutOfRangeException.h
src/exceptions/OverflowException/: OverflowException.h
src/exceptions/ParseException/: ParseException.h
src/string_arithmetics/: string_arithmetics.cpp  string_arithmetics.h
src/string_arithmetics/tests/: string_arithmetics_test.cpp
test/Complex_number/: Complex_number_constructor_test.cpp  Complex_number_operators_test.cpp
test/Matrix/: Matrix_test.cpp
test/Matrix/Coords/: Matrix_column_coord_test.cpp  Matrix_coords_test.cpp  Matrix_row_coord_test.cpp
test/Matrix/matrix-files/: matrix1.txt  matrix2.txt
test/Pos/: Pos_test.cpp
test/Rational_number/: Rational_number_constructor_test.cpp  Rational_number_operators_test.cpp
test/StringInt/: StringInt_cast_test.cpp  StringInt_constructor_test.cpp  StringInt_operators_test.cpp
test/Vector/: Vector_test.cpp  vector-broken.txt  vector-empty.txt  vector-parse-exception.txt  vector1.txt  vector2.txt
test/Vector/vector-files/: vector1.txt  vector2.txt
